<resources>
	<string name="app_name">淘客宝</string>
	<string name="net_wrok_unconnetion_text">网络连接失败</string>
	
	<string name="tab_homepage">首页</string>
	<string name="tab_nine_point_nine">9.9包邮</string>
	<string name="tab_type">分类</string>
	<string name="tab_my">我的</string>
	
	<string name="register_title">注册</string>
	<string name="register_name">昵称</string>
	<string name="register_name_hint">请输入您的昵称</string>
	<string name="register_phone">手机号</string>
	<string name="register_phone_hint">请输入您的手机号</string>
	<string name="register_code">验证码</string>
	<string name="register_get_code">获取验证码</string>
	<string name="register_code_hint">请输入验证码</string>
	<string name="register_psw">密码</string>
	<string name="register_psw_hint">请输入6-18位密码</string>
	<string name="register_invate_code">邀请码</string>
	<string name="register_invate_code_hint">请输入邀请码</string>
	<string name="register_licence">点击"注册"表示您已经同意《用户协议》</string>
	<string name="register_login">已有账号？点击登录</string>

</resources>
